name:                tasty-gradescope
version:             0.1.0.0
synopsis:            Generate GradeScope score summaries from a Tasty testsuite
-- description:
homepage:            https://github.com/PLSysSec/tasty-gradescope#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          mattchan@ucsd.edu
copyright:           2017 UCSD PLSysSec
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/plsyssec/tasty-gradescope

library
  hs-source-dirs:      src
  exposed-modules:     Test.Tasty.GradeScope
  build-depends:       base >= 4.7 && < 5,
                       directory,
                       containers,
                       stm, tagged,
                       filepath,
                       process,
                       json,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       QuickCheck >=2.9.2
  default-language:    Haskell2010

test-suite tasty-gradescope-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty-gradescope
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
